Fix Demo Header
Add a z-index so graphs don't overlap it.

--- a/examples/_demo.css
+++ b/examples/_demo.css
@@ -33,6 +33,7 @@ code {
   height: 50px;
   background: #333333;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+  z-index: 999;
 }
 
 #title {
